fix z-index on header for netlifyCMS login

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -45,7 +45,7 @@ section {
 header {
   padding:1rem;
   position: relative;
-  z-index: 999;
+  z-index: 9;
   display:flex;
   align-items: center;
   justify-content: space-between;
